# basic_api

./: .gitignore  pyproject.toml
basic_api/: app.py  schemas.py
migrations/: env.py
migrations/versions/: 8bffbbc935f3_create_users_table.py
tests/: conftest.py  test_app.py  test_model.py
